# Android-Disassembler

./: .classpath  .gitattributes  .gitignore  .gitmodules  AndroidManifest.xml  CONTRIBUTING.md  LICENSE  PULL_REQUEST_TEMPLATE.md  README.md  Structure of this project.md  appveyor.yml  appveyor_deactivated  build.gradle  ccMvWfgY.s  file-list  gradle.properties  hello-jni.cpp  local.properties  project.properties  settings.gradle
app/: CMakeLists.txt  build.gradle  google-services.json  proguard-rules.pro
app/release/: output.json
app/src/github/danielnilsson9/colorpickerview/dialog/: ColorPickerDialogFragment.java
app/src/github/danielnilsson9/colorpickerview/drawable/: AlphaPatternDrawable.java
app/src/github/danielnilsson9/colorpickerview/view/: DrawingUtils.java
app/src/main/: AndroidManifest.xml
app/src/main/asm/: Il2CppDumper.exe.S  Mono.Cecil.Mdb.dll.S  Mono.Cecil.Pdb.dll.S  Mono.Cecil.Rocks.dll.S
app/src/main/assets/: androidicon  binutils  capstone  filechooser  helpchoosefile  helpdetail  icons  ls-x86  pecoff4j
app/src/main/assets/themes/: IDAlike.json  KYHSGeekCode.json  Patrick_black.json  alex_black.json
app/src/main/cpp/: Application.mk  CMakeLists.txt  SStream.c  cs.c  cs_priv.h  native-lib.cpp
app/src/main/cpp/arch/AArch64/: AArch64InstPrinter.c
app/src/main/cpp/arch/ARM/: ARMDisassembler.c  ARMInstPrinter.c
app/src/main/cpp/arch/X86/: X86ATTInstPrinter.c  X86IntelInstPrinter.c
app/src/main/cpp/elfio/: elf_types.hpp  elfio.hpp  elfio_dump.hpp  elfio_relocation.hpp  elfio_section.hpp
app/src/main/cpp/interpreter/: arm_emulator.cpp  arm_emulator.h
app/src/main/cpp/plthook/: README.md  plthook.h  plthook_elf.c  plthook_osx.c  plthook_win32.c
app/src/main/cpp/plthook/test/: .gitignore  Makefile  Makefile.win32  libtest.c  libtest.def  libtest.h  testprog.c
app/src/main/java/capstone/: Arm.java  Arm.kt  Arm64.java  Arm64_const.java  Arm64_const.kt  Arm_const.java  Arm_const.kt  Capstone.java  Capstone.kt  Mips.java  Mips_const.java  Mips_const.kt  Ppc.java  Ppc_const.java  Ppc_const.kt  Sparc.java  Sparc_const.java  Sparc_const.kt  Systemz.java  Sysz_const.java  Sysz_const.kt  X86.java  X86_const.java  X86_const.kt  Xcore.java  Xcore_const.java  Xcore_const.kt
app/src/main/java/chan/murmur/: Constant.kt  Three.kt
app/src/main/java/com/kyhsgeekcode/: FileExtensions.kt  FileNode.kt  Util.kt
app/src/main/java/com/kyhsgeekcode/disassembler/: APKFragment.kt  ARMResult.java  AbstractFile.java  AbstractFile.kt  AnalysisResultFragment.kt  Analyzer.java  Analyzer.kt  AppIntroActivity.java  ArchiveFragment.kt  ArrowView.java  AssemblyProvider.java  AssemblyProvider.kt  AsyncTaskDialog.java  BinaryDetailFragment.kt  BinaryDisasmFragment.kt  BinaryExportSymbolFragment.kt  BinaryFragment.kt  BinaryImportSymbolFragment.kt  BinaryOverviewFragment.kt  BinarySymbolFragment.kt  ChooseColumnDialog.java  ColorHelper.java  ColorHelper.kt  ColorPickerDialog.java  ColorPrefDialog.java  ColorPrefLvAdapter.java  ColumnSetting.java  CrashReportFileProvider.kt  CustomDialog.java  (+107 more)
app/src/main/res/drawable/: colorpickerview__btn_background.xml  colorpickerview__btn_background_pressed.xml
app/src/main/res/drawable-hdpi/: cell_shape.xml
app/src/main/res/layout/: activity_colorpicker_dialog.xml  activity_custom_dialog.xml  activity_donate.xml  activity_made_by.xml  activity_new_file_chooser.xml  before_data.xml  calculator.xml  colorpref_dialog.xml  colorpref_itemrow.xml  disasmtab.xml  export_symbol_row.xml  fileaselactivity.xml  filedraweritem.xml  fragment_analysis_result.xml  fragment_apk.xml  fragment_archive.xml  fragment_binary.xml  fragment_binary_detail.xml  fragment_binary_disasm.xml  fragment_binary_overview.xml  fragment_dex.xml  fragment_dot_net.xml  fragment_export_symbol.xml  fragment_hexview.xml  fragment_image.xml  fragment_import_symbol.xml  fragment_log.xml  fragment_overview.xml  fragment_project_overview.xml  fragment_string.xml  fragment_symbol.xml  fragment_text.xml  hex.xml  hexcol.xml  image_layout.xml  import_symbol_row.xml  listview_item.xml  logview_item.xml  main.xml  new_file_chooser_row.xml  (+7 more)
app/src/main/res/menu/: menu_bin.xml  menu_main.xml
app/src/main/res/values/: array.xml  arrays.xml  attrs.xml  colors.xml  dimen.xml  strings.xml  styles.xml
app/src/main/res/values-ko/: strings.xml
app/src/main/res/values-night/: colors.xml
app/src/main/res/values-v21/: styles.xml
app/src/main/res/xml/: pref_devinfo.xml  pref_opensource.xml  pref_settings.xml  provider_paths.xml
app/src/main/res/xml-v30/: pref_settings.xml
(+363 files in other folders)
